--- a/fastlane/lib/assets/s3_html_template.erb
+++ b/fastlane/lib/assets/s3_html_template.erb
@@ -63,7 +63,7 @@
       </span> -->
     </div>
 
-    <h3 id="desktop">Please open this page on your iPhone!</h3>
+    <h3 id="invalid-device">Please open this page on your iPhone!</h3>
 
     <p id="finished">
       App is being installed. Close Safari using the home button.
@@ -75,21 +75,29 @@
     <img src="https://s3-eu-west-1.amazonaws.com/fastlane.tools/fastlane_medium.png" id="fastlaneLogo" />
   </body>
 
-  <script type='text/javascript'>
-    // if (/Android/i.test(navigator.userAgent))
-    // {
-    //   document.getElementById("ios").remove()
-    //   document.getElementById("desktop").remove()
-    // }
-    if (/iPhone|iPad|iPod/i.test(navigator.userAgent))
-    {
-      // document.getElementById("android").remove()
-      document.getElementById("desktop").remove()
-    }
-    else
-    {
-      document.getElementById("ios").remove()
-      // document.getElementById("android").remove()
-    }
-  </script>
+    <script type='text/javascript'>
+      // Array of supported devices, 1 is iPhone, 2 is iPad
+      var deviceFamily = <%= device_family %>;
+
+      function isIphoneValid() {
+        return deviceFamily.indexOf(1) != -1;
+      }
+
+      if (/iPhone|iPod/i.test(navigator.userAgent)) {
+        if (isIphoneValid()) {
+          document.getElementById("invalid-device").remove();
+        } else {
+          document.getElementById("ios").remove();
+          document.getElementById("invalid-device").innerHTML = "Please open this page on your iPad!";
+        }
+      } else if (/iPad/i.test(navigator.userAgent)) {
+        // iPhone only apps can still be installed on an iPad
+        document.getElementById("invalid-device").remove();
+      } else {
+        document.getElementById("ios").remove();
+
+        var validDeviceName = isIphoneValid() ? "iOS device" : "iPad";
+        document.getElementById("invalid-device").innerHTML = "Please open this page on your " + validDeviceName + "!";
+      }
+    </script>
 </html>
