--- a/fastlane/lib/assets/Actions.md.erb
+++ b/fastlane/lib/assets/Actions.md.erb
@@ -15,9 +15,9 @@ You can import another `Fastfile` by using the `import` action. This is useful i
 import './path/to/other/Fastfile'
 ```
 
-<%- @categories.each do |category, actions| %>
+<%- @categories.each do |category, actions| -%>
 - [<%= category %>](#<%= category.gsub(" ", "-").downcase %>)
-<% end %>
+<%- end -%>
 
 
 
@@ -29,7 +29,7 @@ import './path/to/other/Fastfile'
 
 <%= action.description %>
 
-> <%= action.details.gsub("\n", " ") unless action.details.to_s.empty? %>
+> <%= action.details.gsub("\n\n", "\n") unless action.details.to_s.empty? %>
 
 <%= action.action_name %> | 
 -----|----
