--- a/fastlane/lib/fastlane/plugins/template/README.md.erb
+++ b/fastlane/lib/fastlane/plugins/template/README.md.erb
@@ -49,4 +49,4 @@ For more information about how the `fastlane` plugin system works, check out the
 
 ## About `fastlane`
 
-`fastlane` is the easiest way to automate beta deployments and releases for your iOS and Android apps. To learn more, check out [docs.fastlane.tools](https://fastlane.tools).
+`fastlane` is the easiest way to automate beta deployments and releases for your iOS and Android apps. To learn more, check out [fastlane.tools](https://fastlane.tools).
