Add in deprecated notes to doc

--- a/fastlane/lib/assets/Actions.md.erb
+++ b/fastlane/lib/assets/Actions.md.erb
@@ -30,6 +30,8 @@ import './path/to/other/Fastfile'
 
 <%= action.description %>
 
+<%= "> #{action.deprecated_notes.gsub("\n\n", "\n")}" unless action.deprecated_notes.to_s.empty? %>
+
 <%= "> #{action.details.gsub("\n\n", "\n")}" unless action.details.to_s.empty? %>
 
 <%= action.action_name %> | 
