Add review information to preview

--- a/deliver/lib/assets/summary.html.erb
+++ b/deliver/lib/assets/summary.html.erb
@@ -114,6 +114,16 @@
               float: left;
               margin-right: 20px;
           }
+
+          .app-review-information {
+            margin-left: 15px;
+            margin-right: 15px;
+            margin-top: 22px;
+          }
+
+          .app-review-information-key {
+            font-weight: 700;
+          }
         </style>
     </head>
     
@@ -228,5 +238,20 @@
         
         <hr />
       <% end # end data %>
+      <% if @options[:app_review_information] %>
+        <div class="app-review-information">
+          <div class="cat-headline">Review Information</div>
+          <dl class="app-review-information">
+            <% @options[:app_review_information].each do |key, value| %>
+                <dt class="app-review-information-key">
+                  <%= key.to_s.capitalize.gsub("_", " ") %>
+                </dt>
+                <dd class="app-review-information-text">
+                  <%= (value || '').gsub("\n", "<br />") %>
+                </dd>
+            <% end %>
+          </dl>
+        </div>
+    <% end %>
     </body>
 </html>
